# ChangeLog for dev-java/ibm-jre-bin
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/ibm-jre-bin/ChangeLog,v 1.4 2004/06/02 22:51:43 agriffis Exp $

  02 Jun 2004; Aron Griffis <agriffis@gentoo.org> ibm-jre-bin-1.4.1-r1.ebuild,
  ibm-jre-bin-1.4.1.ebuild:
  Fix use invocation

*ibm-jre-bin-1.4.1-r1 (29 May 2004)

  29 May 2004; David Holm <dholm@gentoo.org> +files/ibm-jre-bin-1.4.1,
  +ibm-jre-bin-1.4.1-r1.ebuild:
  Fixed bug #51293.

  01 May 2004; <SeJo@gentoo.org> ibm-jre-bin-1.4.1.ebuild:
  added ~x86 for karltk

*ibm-jre-bin-1.4.1 (01 May 2004)

  01 May 2004; <SeJo@gentoo.org> +metadata.xml, +ibm-jre-bin-1.4.1.ebuild:
  new ibm-jre ebuild
