@@ -1,7 +1,12 @@
 # ChangeLog for dev-java/ibm-jre-bin
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/ibm-jre-bin/ChangeLog,v 1.4 2004/06/02 22:51:43 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/ibm-jre-bin/ChangeLog,v 1.5 2004/06/03 17:07:58 karltk Exp $
 
+  03 Jun 2004; Karl Trygve Kalleberg <karltk@gentoo.org> 
+  ibm-jre-bin-1.4.1.ebuild, ibm-jre-bin-1.4.1-r1.ebuild:
+  Added check to pkg_postrm to warn if the user is uninstalling his
+  default system VM, partial fix for #9289.
+  
   02 Jun 2004; Aron Griffis <agriffis@gentoo.org> ibm-jre-bin-1.4.1-r1.ebuild,
   ibm-jre-bin-1.4.1.ebuild:
   Fix use invocation
